.gitingore'd a lot of files(Maybe)
Now you will only see stuff that matters
(There is also half-written code here, you have been warned)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Local project files
+.settings/
+bin/
+eclipse/
+.gradle/
+build/
+gradle/
+*.classpath
+*.project
+build.gradle
+gradlew
+gradlew.bat
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
